# necko3-core

./: .gitignore  Cargo.toml
migrations/postgres/: 20260211_init.sql  20260213_add_decimals_to_invoices.sql  20260214_add_block_lag.sql  20260216_add_confirmations.sql  20260217_add_payments.sql  20260218_create_webhooks.sql  20260219_payment_improved_idempotency.sql  20260220_fix_log_index_type.sql
src/: config.rs  lib.rs  model.rs  state.rs
src/chain/: evm.rs  mod.rs
src/db/: mock.rs  mod.rs  postgres.rs
src/state/: confirmator.rs  janitor.rs  mod.rs  watcher.rs  webhook.rs
